# stridespot_email_system

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
src/auth_credentials/: credentials.rs
src/services/: mod.rs
src/services/delivery/: delivery.rs  mod.rs
src/services/login/: login.rs
src/services/marketing/: marketing.rs  mod.rs
src/services/otp/: mod.rs  otp.rs
src/services/payment/: payment.rs
src/services/registration/: registration.rs
src/services/resetpassword/: mod.rs  resetpassword.rs
src/services/updates/: update.rs
